--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /*  import google fonts */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Roboto:wght@100;300;400;500;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Lato:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -44,14 +43,14 @@ section{
 section .title{
     position: relative;
     text-align: left;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'DM Sans', sans-serif;
     font-weight: 600;
     font-size: 64px;
     margin-bottom: 20px;
     padding-bottom: 20px;
 }
 section p{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 19px;
@@ -67,7 +66,7 @@ section p{
     width: 100%;
     z-index: 999;
     padding: 30px 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     transition: all 0.3s ease;
 }
 .navbar.sticky{
@@ -93,7 +92,7 @@ section p{
 .navbar .menu li a{
     display: block;
     color: #000;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
@@ -254,7 +253,7 @@ section p{
     font-weight: 500;
     margin-bottom: 60px;
     padding-bottom: 20px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 .title::before,
 .teams .title::before{
@@ -282,7 +281,7 @@ section p{
     transform: scale(1.05);
 }
 .teams .carousel .card .text{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 25px;
     font-weight: 550;
     margin: 10px 0 7px 0;
