--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /*  import google fonts */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Lato:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Lato:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -33,7 +35,9 @@ section{
     padding: 0px 80px;
     margin: auto;
 }
-
+.mission .title, .vision .title,.ourstory .title{
+    font-weight: 400;
+}
 .about .about-content,.vision .vision-content,.mission .mission-content,.ourstory .ourstory-content{
     display: flex;
     flex-wrap: wrap;
@@ -44,20 +48,20 @@ section .title{
     color: #192033;
     position: relative;
     text-align: left;
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-weight: 600;
     font-size: 64px;
     margin-bottom: 20px;
     padding-bottom: 20px;
 }
 section p{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-style: normal;
     font-weight: 300;
     font-size: 19px;
     line-height: 23px;
     display: flex;
-    align-items: center;
+    text-align: left;
 }
 
 
@@ -67,7 +71,7 @@ section p{
     width: 100%;
     z-index: 999;
     padding: 30px 0;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Zilla Slab', serif;
     transition: all 0.3s ease;
 }
 .navbar.sticky{
@@ -93,7 +97,7 @@ section p{
 .navbar .menu li a{
     display: block;
     color: #000;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
@@ -112,8 +116,12 @@ section p{
 .navbar .menu li a:hover{
     color: #ff9d01;
 }
+
 .navbar.sticky .menu li a:hover{
     color: #ff9d01;
+}
+.navbar .menu li .install-button:hover{
+    color: #f1f1f1;
 }
 
 
@@ -168,8 +176,8 @@ section p{
     width: 40%;
 }
 .about .about-content .right img{
-    height: 400px;
-    width: 400px;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
     padding-left: 20px;
 }
@@ -179,7 +187,6 @@ section p{
 }
 
 
-
 .about .about-content .left .text{
     font-size: 25px;
     font-weight: 600;
@@ -187,7 +194,9 @@ section p{
 }
 
 .about .about-content .left p{
-    text-align: justify;
+    text-align: left;
+    /* max-width: 70%; */
+    letter-spacing: 1px;
 }
 
 
@@ -212,10 +221,13 @@ section p{
 
 .mission .mission-content .right{
     width: 40%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .mission .mission-content .left p{
     text-align: justify;
+    /* max-width: 70%; */
 }
 
 
@@ -239,6 +251,7 @@ section p{
 }
 .vision .vision-content .right p{
     text-align: justify;
+    /* max-width: 70%; */
 }
 
 /* teams section styling */
@@ -254,7 +267,7 @@ section p{
     font-weight: 500;
     margin-bottom: 60px;
     padding-bottom: 20px;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Zilla Slab', serif;
 }
 .title::before,
 .teams .title::before{
@@ -282,7 +295,7 @@ section p{
     transform: scale(1.05);
 }
 .teams .carousel .card .text{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-size: 25px;
     font-weight: 550;
     margin: 10px 0 7px 0;
@@ -335,8 +348,8 @@ section p{
 }
 .ourstory .ourstory-content .left img{
     
-    height: 450px;
-    width: 450px;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
     padding-left: 20px;
     
@@ -348,7 +361,9 @@ section p{
 }
 
 .ourstory .ourstory-content .left p{
-    text-align: justify;
+    text-align: left;
+    letter-spacing: 1px;
+    /* max-width: 70%; */
 }
 
 
@@ -360,7 +375,7 @@ section p{
 
 /* responsive media query start */
 @media (max-width: 1104px) {
-
+    
     .mission .title,.vision .title ,.about .title,
     .ourstory .title{
         text-align: center;
@@ -401,12 +416,16 @@ section p{
         padding-top: 0;
     }
     section p{
+        
         font-size: 20px;
     }
     .about{
         background: none;
     }
-    
+    .ourstory .ourstory-content .left p,.vision .vision-content .right p,.about .about-content .left p,
+    .mission .mission-content .left p{
+        max-width: 100%;
+    }
     .menu-btn{
         display: block;
         z-index: 999;
@@ -420,7 +439,7 @@ section p{
         width: 100%;
         left: -100%;
         top: 0;
-        background: rgb(164, 145, 145);
+        background: #fff8ed;
         text-align: center;
         padding-top: 80px;
         transition: all 0.3s ease;
