--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 /*  import google fonts */
-/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Lato:wght@300&family=Roboto:wght@100;300;400;500;700;900&display=swap'); */
-
-@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -48,14 +46,14 @@ section .title{
     color: #192033;
     position: relative;
     text-align: left;
-    font-family: 'Zilla Slab', serif;
+    font-family: 'DM Sans', sans-serif;
     font-weight: 600;
     font-size: 64px;
     margin-bottom: 20px;
     padding-bottom: 20px;
 }
 section p{
-    font-family: 'Zilla Slab', serif;
+    font-family: 'DM Sans', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 19px;
@@ -71,7 +69,7 @@ section p{
     width: 100%;
     z-index: 999;
     padding: 30px 0;
-    font-family: 'Zilla Slab', serif;
+    font-family: 'DM Sans', sans-serif;
     transition: all 0.3s ease;
 }
 .navbar.sticky{
@@ -97,7 +95,7 @@ section p{
 .navbar .menu li a{
     display: block;
     color: #000;
-    font-family: 'Zilla Slab', serif;
+    font-family: 'DM Sans', sans-serif;
     font-size: 18px;
     font-weight: 500;
     margin-left: 25px;
@@ -144,7 +142,7 @@ section p{
     bottom: 10px;
     text-align: center;
     line-height: 45px;
-    color: #000;
+    color: #fff;
     z-index: 9999;
     font-size: 30px;
     border-radius: 6px;
@@ -267,7 +265,7 @@ section p{
     font-weight: 500;
     margin-bottom: 60px;
     padding-bottom: 20px;
-    font-family: 'Zilla Slab', serif;
+    font-family: 'DM Sans', sans-serif;
 }
 .title::before,
 .teams .title::before{
@@ -295,7 +293,7 @@ section p{
     transform: scale(1.05);
 }
 .teams .carousel .card .text{
-    font-family: 'Zilla Slab', serif;
+    font-family: 'DM Sans', sans-serif;
     font-size: 25px;
     font-weight: 550;
     margin: 10px 0 7px 0;
@@ -439,7 +437,7 @@ section p{
         width: 100%;
         left: -100%;
         top: 0;
-        background: #fff8ed;
+        background: #fff;
         text-align: center;
         padding-top: 80px;
         transition: all 0.3s ease;
