--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ section .title{
     font-family: 'DM Sans', sans-serif;
     font-weight: 600;
     font-size: 64px;
-    margin-bottom: 20px;
     padding-bottom: 20px;
 }
 section p{
@@ -75,7 +74,7 @@ section p{
 .navbar.sticky{
     padding: 15px 0;
     background: #fff;
-    box-shadow: 0 2px 4px 0 rgba(0,0 ,0,.4)
+    box-shadow: 0px 10px 30px 5px rgba(0, 0, 0, 0.05);
 }
 .navbar .max-width{
     display: flex;
@@ -172,6 +171,8 @@ section p{
 }
 .about .about-content .right{
     width: 40%;
+    display: flex;
+    align-items: flex-end;
 }
 .about .about-content .right img{
     height: 100%;
@@ -279,9 +280,6 @@ section p{
     overflow: hidden;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover{
-    background: #ff9d01;
-}
 .teams .carousel .card .box{
     display: flex;
     flex-direction: column;
@@ -306,12 +304,9 @@ section p{
     border: 5px solid #ff9d01;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover img{
-    border-color: #fff;
-}
 .owl-dots{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 18px;
 }
 .owl-dot{
     height: 13px;
@@ -323,7 +318,7 @@ section p{
     transition: all 0.3s ease;
 }
 .owl-dot.active{
-    width: 35px;
+    width: 30px;
     border-radius: 14px;
 }
 .owl-dot.active,
