--- a/style.css
+++ b/style.css
@@ -411,6 +411,7 @@ section p{
     section p{
         
         font-size: 20px;
+        text-align: center;
     }
     .about{
         background: none;
